# Spaal

./: .gitignore  GEMINI.md  README.md  accumulate_signal_list.txt  amplitude_sample.txt  detect_echo.txt  hello.py  pyproject.toml
datasets_generator/: distance_visualizer.py  hist_matrix_generator.py  hist_matrix_visualizer.py  interactive_histogram_visualizer.py  lidar_signal_generator.py  visualize_lidar_data.py
evaluation/: evaluate_reconstruction.py
example/: ahfr.py  ahfr_with_perturbation.py  continuous_pulse_with_perturbation.py  pcd_lidar_amplitude_example.py  pcd_lidar_example.py
reconstruction/: hfr_frequency_identifier.py  hfr_frequency_identifier_fourier.py  notch_filter.py  peak_interval_reconstructor.py  rule_based_reconstructor.py  run_pipeline.py  visualize_filter_effect.py
spaal2/core/: __init__.py  dummy_outdoor.py  measurement_config.py  noise.py  noise_utils.py  precise_duration.py  sunlight.py  velo_point.py  visualize_velopoint.py
spaal2/core/dummy_lidar/: __init__.py  dummy_lidar_vlp16.py  dummy_lidar_vlp16_pcd.py  dummy_lidar_vlp16_pcd_amplitude.py  dummy_lidar_vlp32_pcd.py  dummy_lidar_vlp32c.py  echo.py  echogroup.py
spaal2/core/dummy_spoofer/: __init__.py  dummy_spoofer_adaptive_hfr.py  dummy_spoofer_adaptive_hfr_with_perturbation.py  dummy_spoofer_adaptive_hfr_with_speculation.py  dummy_spoofer_arb.py  dummy_spoofer_continuous_pulse.py  dummy_spoofer_continuous_pulse_with_perturbation.py  dummy_spoofer_interface.py  dummy_spoofer_off.py
