[project]
name = "spaal2-core"
version = "2.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "organic-nailer", email = "hykwyuk0125@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "open3d>=0.18.0",
    "simple-pcd-viewer",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "spaal2.core",
    "spaal2.core.dummy_lidar",
    "spaal2.core.dummy_spoofer",
]

[tool.uv.sources]
simple-pcd-viewer = { git = "https://github.com/organic-nailer/simple_pcd_viewer.git" }
